[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fifteen = { path = "../fifteen" }
twenty-three = { path = "../twenty-three" }
twenty-four = { path = "../twenty-four" }
utils = { path = "../utils" }
